# reversal-curse-mini-replication

./: .gitignore  README.md  README.me  celebs_parents.json  child_to_parent.py  parent_to_child.py  pred_celebs_parents.json  pyproject.toml
